Upgrade to Java 19 and some preview features.
Concurrent tasks are now executed in virtual threads, instead of a fixed
thread pool. The overhead should be much lower that way.