@@ -29,6 +29,16 @@
 
     <build>
         <plugins>
+            <!-- Java 19 preview support for virtual threads -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <release>19</release>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
             <!-- JUnit 5 support -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
